<resources>
    <string name="app_name">Notă</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add Task</string>
    <string name="title">Task Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="body">Task Details</string>
    <string name="done">Done</string>
    <string name="taskDetails">Task Details</string>
    <string name="taskEdit">Edit Task</string>
    <string name="whatTo">What is next?</string>
    <string name="titleeeeee">fl;sdfslfslfsd;lkflfdkl;fkl;fdslk;fdsfds;lkfl;ksfdlkflk;fl;kfdslkfdslkfdlskfdskl;fdslk;fdslk;fdskl;fdsl;kfsdlk;fdsl;kdsl;kdsflk;fdslk;fdslk;dflk;dfslk;dsfkl;fdslk;fdslk;dfslk;fdskl;dfslk;dfslk;dfslk;dsflk;fdslk;fsdl;kdsflk;fdsl;kdfsl;fdsl;kdfslfd\'sk\'jlfdskjl\'fdkjl;fsdaj;sdaf,;jxa;l,jfd;ljkxfdj;l,xfdj;,xfj;l,xfdjl;,xf;jl,dxf;lj,xdf;lj,dxfj;lkdxfjkl;xfj;lkxfj;lkxfj;lkxfaj;lkxfjlk;xfdj;lkxfj;lkdjxfl;kxfj;xfdj;lxfdj;lfdxj;l,xfd;jl,fxd;;jx,lffffffffffffffffffffffffffffffffffffffffffffffffffffffffaj,;xfad,j;lxjf;,lfj,xfj,xfdj,fxdj,lfxdj;l,fxd;jl,fdj;l,xf;jl,f;jl,fx;j,lfx;j,lj,;fl;xfl,jfx;lj,fsj;lfx,jl;sfsd;jlfsjd;lfsdj;lfj;dsl;jlfsd;ljfdsjl;fsdjl;sfdjl;kfsdj;lkdsfj;lkdsfjkl;fdj;lkfweopjfewojpfokjfkd;lsfeoix[o,jfoj,xf,jxfeojo,xfpe[o,jfej[o,xfej[o,xfej[o,fxqej[,oexfqjo[,xfe[o,jexfj,jxf[oej[o,xfoj,[xfqj,o[fqex[o,jxfeq[jo,jexf[j,o[xefj[o,fxeoj,[fxej[ofxeoj,fj[,ojf[xfew[o,jxef[o,jexfj,[fx,jfxej,xfexfexfepo,xfeq,o[xfe,joxffxe[o,jfkoooooooopppppppooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</string>
</resources>
