<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/back"
    android:layout_height="match_parent"
    tools:context="com.example.ubuntu.list_todo.Add">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:divider="@drawable/big_div"
        android:showDividers="middle"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatTo"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/greeny"
            android:fontFamily="serif-monospace"
            />

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textAlignment="center"
            android:background="@drawable/black_rect"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textColorHighlight="@android:color/darker_gray"
            />

        <EditText
            android:id="@+id/add_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="200dp"
            android:padding="7dp"
            android:hint="@string/body"
            android:textColor="@android:color/black"
            android:textAlignment="gravity"

            android:gravity="top"
            android:background="@drawable/black_rect"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/red_rect"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/cancel"
                android:onClick="Cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/green_rect"
                android:textColor="@color/greeny"
                android:text="@string/save"
                android:onClick="Save"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>